--- a/app/templates/base_clean_version.html
+++ b/app/templates/base_clean_version.html
@@ -524,7 +524,7 @@
                                                     <li><a class="dropdown-item" href="{{ url_for('portfolio.stock_tips') }}"><i class="fas fa-lightbulb"></i> Aksjetips</a></li>
                                                     <li><hr class="dropdown-divider"></li>
                                                     <li><a class="dropdown-item" href="{{ url_for('portfolio.advanced') }}"><i class="fas fa-cogs"></i> Avansert portfolio</a></li>
-                                                    <li><a class="dropdown-item" href="{{ url_for('advanced_analytics.index') }}"><i class="fas fa-robot"></i> ML Analytics</a></li>
+                                                    <li><a class="dropdown-item" href="{{ url_for('advanced_features.index') }}"><i class="fas fa-robot"></i> ML Analytics</a></li>
                                                 </ul>
                                             </li>
                                             <li class="nav-item dropdown">
