--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -46,7 +46,7 @@
                             <strong>Brukernavn:</strong>
                         </div>
                         <div class="col-sm-9">
-                            {{ user.username }}
+                            {{ user.username if user and user.username else 'Ukjent' }}
                         </div>
                     </div>
                     <div class="row mb-3">
@@ -54,7 +54,7 @@
                             <strong>E-post:</strong>
                         </div>
                         <div class="col-sm-9">
-                            {{ user.email }}
+                            {{ user.email if user and user.email else 'Ukjent' }}
                         </div>
                     </div>
                     <div class="row mb-3">
@@ -96,7 +96,6 @@
                 </div>
             </div>
             
-            <!-- Mine favoritter section moved above Abonnement -->
             <div class="card mb-4">
                 <div class="card-header bg-warning text-dark">
                     <h5 class="mb-0"><i class="bi bi-star-fill"></i> Mine favoritter</h5>
@@ -658,6 +657,7 @@ function showErrorToast(message) {
     });
 }
 </script>
+{% endblock %}
 {% endblock %}
     const bootstrapToast = new bootstrap.Toast(toast);
     bootstrapToast.show();
